--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "~1.12.1",
     "forever": "^0.15.1",
     "glob": "^6.0.1",
+    "google-calendar": "^1.3.2",
     "grunt": "~0.4.5",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-csslint": "^0.5.0",
