--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "acl": "~0.4.9",
+    "angular-filter": "^0.5.8",
     "async": "~1.5.0",
     "body-parser": "~1.14.1",
     "bower": "~1.6.8",
