--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
+    "underscore": "^1.8.3",
     "validator": "^4.3.0"
   },
   "devDependencies": {
