--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "angular-jquery-timepicker": "^0.10.0",
     "angular-material": "~1.0.6",
     "angular-moment": "~0.10.3",
-    "moment": "~2.12.0"
+    "moment": "~2.12.0",
+    "font-awesome": "fontawesome#~4.6.1"
   },
   "resolutions": {
     "angular": "~1.3"
