--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
     "underscore": "^1.8.3",
-    "validator": "^4.3.0"
+    "validator": "^4.3.0",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "grunt-concurrent": "^2.1.0",
