--- a/package.json
+++ b/package.json
@@ -66,8 +66,10 @@
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
+    "twilio": "^2.9.1",
     "underscore": "^1.8.3",
-    "validator": "^4.3.0"
+    "validator": "^4.3.0",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "grunt-concurrent": "^2.1.0",
