--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "bootstrap": "~3",
     "angular": "~1.3",
     "angular-resource": "~1.3",
-    "angular-animate": "~1.3",
+    "angular-animate": "1.2.6",
     "angular-mocks": "~1.3",
     "angular-bootstrap": "~0.13",
     "angular-ui-utils": "bower",
